--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
+    "axios": "^0.26.1",
+    "background-image-on-load": "^1.1.0",
+    "eslint": "^8.11.0",
+    "eslint-config-react-app": "6",
     "framer-motion": "^4.0.0",
+    "image-search-google": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
@@ -22,9 +27,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-react": "^7.16.7",
+    "babel-eslint": "^10.1.0"
   }
 }
